Update azure-pipelines.yml for Azure Pipelines
added step to publish package to pipeline artifacts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,11 @@ steps:
 - script: |
     yarn install
     yarn run vscode:prepublish
-    yarn run vscode:package
+    yarn run vscode:package -o $(Build.ArtifactStagingDirectory)
   displayName: 'Build Package'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'packages'
+    publishLocation: 'Container'
