--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,8 +40,10 @@ steps:
       Contents: 'package.json'
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-  -
-    task: PublishBuildArtifacts@1
+
+
+  - task: PublishBuildArtifacts@1
     inputs:
-      PathtoPublish: $(Build.ArtifactStagingDirectory)
-      publishLocation: Container
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'packages'
+      publishLocation: 'Container'
