Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,19 @@ trigger:
 pool:
   vmImage: Ubuntu-16.04
 steps:
+  - task: GitVersion@5
+    inputs:
+      runtime: 'core'
+      useConfigFile: true
+      configFilePath: 'GitVersion.yml'
+      
   -
     task: NodeTool@0
     inputs:
       versionSpec: 12.x
     displayName: 'Install Node.js'
+
+
   -
     task: YarnInstaller@3
     inputs:
