--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,14 @@ env:
 jobs:
        
   publish:
+    name: Publish
     runs-on: [ubuntu-latest]
     steps:
-        - uses: actions/checkout@v1
-        - name: Publish to Visual Studio marketplace 
-        - run: yarn install
-        - run: yarn publish --pat ${{ secrets.PUBLISH_TOKEN}}
+      - uses: actions/checkout@v1
+      - name: Yarn Install  
+        run: yarn install
+      - name: Yarn Publish 
+        run: yarn publish --pat ${{ secrets.PUBLISH_TOKEN}}
             
      
          
